--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
                 <button id="resetView" class="button secondary">
                     <i class="fas fa-compress-arrows-alt"></i> Reset View
                 </button>
-                <button id="downloadMap" class="button secondary">
+             <!--   <button id="downloadMap" class="button secondary">
                     <i class="fas fa-download"></i> Export Map
                 </button>
+                -->
+                <button id="toggleMosaicView" class="button secondary">
+    <i class="fas fa-th-large"></i> Mosaic View
+</button>
+
                 <div class="search-container">
                     <input type="text" id="searchInput" placeholder="Search images by filename...">
                     <button id="searchButton" class="button">
