--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             <div class="map-container">
                 <div id="map"></div>
                 <div class="map-overlay" id="mapOverlay">
-                    <div class="drag-text">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                        <div>Drop images here</div>
-                    </div>
-                </div>
+    <div class="drag-text">
+        <i class="fas fa-cloud-upload-alt"></i>
+        <div>Drop Images Here</div>
+        <p>Drag and drop your geotagged photos to view them on the map</p>
+    </div>
+</div>
             </div>
 
             <div id="imagePreview" class="image-preview hidden">
