--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <footer>
-        לשאלות / יצירת קשר: <a href="mailto:yehudaheller10@gmail.com"> Contact Yehuda Heller/a>
+        לשאלות / יצירת קשר: <a href="mailto:yehudaheller10@gmail.com"> Contact Yehuda Heller</a>
     </footer>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
