--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-top">
                 <h1><i class="fas fa-globe-americas"></i> GeoImage Explorer</h1>
                 <div class="app-info">
-                    <span class="badge">v1.0</span>
+                    <span class="badge">Free :)</span>
                     <span>Explore your photos on the map</span>
                 </div>
             </div>
